<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="wrap_content"
	android:layout_height="match_parent"
	android:id="@+id/newGameLayout">
	<ScrollView android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
    android:background="@drawable/android_bg2"
>	
<LinearLayout
     
    android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	<RelativeLayout android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
			<Button 
		   android:id="@+id/help"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			 
			android:layout_marginLeft="25dp"
			android:layout_alignParentRight="true"	
			android:background="@drawable/help"
				/>
		<TextView 
		    android:id="@+id/newGameScreenTitle"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/newGameScreenTitle" 
			android:layout_marginLeft="25dp" 
			android:textSize="25dp"
			
			/>
			</RelativeLayout>
			 
		<TextView 
		    android:id="@+id/titleLabel"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/title" 
			android:layout_marginLeft="25dp" 
			
			/>
		    
		
		<EditText android:id="@+id/title" 
		  android:layout_width="225dp"
		  android:layout_height="wrap_content"
		  android:layout_marginLeft="40dp"
		  android:background="@drawable/underline"
		  /> 
		  <!-- android:background="@drawable/underline" -->
		 
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/starting_points" 
			android:layout_marginLeft="25dp" 
			
			
			/>

		<EditText
		    android:id="@+id/starting_points"
		    android:layout_width="171dp"
		    android:layout_height="wrap_content"
		    android:inputType="phone"
    		android:digits="1234567890" 
			android:layout_marginLeft="40dp"  
			android:background="@drawable/underline"   		
    		/>
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/num_of_players"
			android:layout_marginLeft="25dp" 			
			 />

		 <Spinner
		     android:id="@+id/spinner"
		     android:layout_width="136dp"
		     android:layout_height="wrap_content"
		     android:prompt="@string/num_of_players"
		     android:layout_marginTop="5dp"
		     android:layout_marginLeft="40dp" 
			android:background="@drawable/underline"		      
			/>
	 		
	 	<!--	<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/name_of_points" />
		 
		  <EditText
		    android:id="@+id/name_of_points"
		    android:layout_width="171dp"
		    android:layout_height="wrap_content"
		    android:hint="@string/pointsDefault"
		     /> -->
	
		 
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		 />
	
	<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/num_of_cust_amounts"
			android:layout_marginLeft="25dp" 			
			 />
	<Spinner
		     android:id="@+id/spinner2"
		     android:layout_width="136dp"
		     android:layout_height="wrap_content"
		     android:prompt="@string/num_of_cust_amounts"
		     android:layout_marginTop="5dp"
		     android:layout_marginLeft="40dp" 
			android:background="@drawable/underline"
			android:layout_marginBottom="15dp"		      
			/>
	<include
        android:id="@+id/additional_value"
        layout="@layout/additional_value" />
	
	<CheckBox android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Allow Entering of Custom Values"
        android:onClick="onCheckboxClicked"
        android:layout_marginLeft="25dp" 
        
        />
	
	<Button android:id="@+id/confirm" 
	  android:text="@string/confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="25dp"
		android:textSize="20dp"
		android:background="@drawable/outline"
		 
		 />
	</LinearLayout>
</ScrollView>
</LinearLayout>